// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message BigqueryreservationAlphaReservation {
  string name = 1;
  int64 slot_capacity = 2;
  bool ignore_idle_slots = 3;
  string creation_time = 4;
  string update_time = 5;
  int64 max_concurrency = 6;
  string project = 7;
  string location = 8;
}

message ApplyBigqueryreservationAlphaReservationRequest {
  BigqueryreservationAlphaReservation resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteBigqueryreservationAlphaReservationRequest {
  string service_account_file = 1;
  BigqueryreservationAlphaReservation resource = 2;
}

message ListBigqueryreservationAlphaReservationRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListBigqueryreservationAlphaReservationResponse {
  repeated BigqueryreservationAlphaReservation items = 1;
}

service BigqueryreservationAlphaReservationService {
  rpc ApplyBigqueryreservationAlphaReservation(ApplyBigqueryreservationAlphaReservationRequest) returns (BigqueryreservationAlphaReservation);
  rpc DeleteBigqueryreservationAlphaReservation(DeleteBigqueryreservationAlphaReservationRequest) returns (google.protobuf.Empty);
  rpc ListBigqueryreservationAlphaReservation(ListBigqueryreservationAlphaReservationRequest) returns (ListBigqueryreservationAlphaReservationResponse);
}
